Changelog

v 1.1:
	- Fixed users being able to use 'manuadd' to add users to higher groups than their own.
	- Added SuperPerms support so GM will update and provide the permissions to plugins which only support Bukkit Perms.
	- Added more helpful output to errors on argument lengths.
	- GroupManager will now attempt to select the default world when using commands instead of failing and telling you to use '/manselect <world>'.
	- Invalid groups assigned to players in users.yml will no longer cause a crash. GM will now set them to the default group instead.
	- Fix for Users.yml containing only 'users:' causing a crash.
	- GroupManager will now generate a fresh Users and Groups yml if either file is empty.
	- Fix for an infinite loop bug with the new Bukkit Perms during a new user creation.
    - Fixed BukkitPerms population. Wasn't correctly setting superperms.
    - Push updates to superperms for all valid GM commands.